vlib/v/checker/tests/sumtype_mismatched_type.vv
type AA = int | string

a := AA(3)
assert a == 3
